<resources>
    <string name="app_name">Card Info Reader</string>

    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">Valid Thru</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>
    <string name="card_type">Card type</string>
    <string name="bank">Bank</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="here_are_your_n_card_details">Here are your\n card details</string>
    <string name="card_info">Enter Card Digits or Scan</string>
    <string name="enter_card_number">Enter Card Number</string>

    <string name="card_number"> XXXX XXXX XXXX XXXX</string>
    <string name="scan_card_with_paycard">Scan Card With PayCard</string>
    <string name="scan_card_with_ml_kit">Scan Card with ML Kit</string>


</resources>
