<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    android:layout_marginStart="30dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="4dp"
    android:padding="20dp"
    >

    <RelativeLayout
        android:id="@+id/rl_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin">



            <ImageView
                android:layout_width="@dimen/chip_width"
                android:layout_height="@dimen/chip_height"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/items_inbetween"
                android:src="@drawable/ic_chip" />

            <TextView
                android:id="@+id/tv_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/card_number_sample"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/items_inbetween_small"
                    android:text="@string/card_validity_label"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xsmall_text"
                    android:gravity="end"
                    />

                <TextView
                    android:id="@+id/tv_validity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_validity_sample"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xsmall_text"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:id="@+id/providerLogo"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/items_inbetween_small"
            android:layout_marginBottom="@dimen/items_inbetween_small"
            android:layout_width="@dimen/cardtype_width"
            android:layout_height="@dimen/cardtype_height"
            tools:src="@drawable/ic_mastercard"
             />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
